GNOME Bugzilla – Bug 741889
Padding tracks and disc numbers appear to be linked for no reason
Last modified: 2014-12-23 08:54:03 UTC
There's no clear connection between padding the number of digits in track numbers and disc numbers, but in EasyTAG preferences these are clearly linked together -- one cannot adjust the disc field padding and track field padding independently as one would expect given the GUI. How to reproduce the issue: 1. Open EasyTAG on any directory (no need for files to edit). 2. Open the EasyTAG preferences panel and go to the tags tab. 3. Set the disc field padding to 2 and press tab to get off of that field, setting its value. 4. Click the "+" sign in the track field padding to increase its padding value by one. 5. Watch the disc field padding increase to match the track field padding (!) and vice versa, if you increase the disc field padding value (!). 6. Toggle off either the disc or track padding by clicking the check box to the left of either setting and watch the other padding field get toggled as well (!). I know of no workarounds for this other than not using EasyTAG to edit these fields. It's not clear to me why these padding fields are in any way connected. I'm not familiar with any tagging format where these tags are mandatory (let alone mandatorily paired) or where one may not set these values independently. I'd like to have disc padding set to 0 and track padding set to 2 but I can't use the GUI controls to do this. I might like to not have EasyTAG pad the disc value at all while still padding the track field to 2 digits, but I can't do this either. If there is a good reason to link these together it would be helpful for the GUI to give some indication of that linking, ideally explaining why they're linked. Perhaps text in the panel, some kind of subordination indicator (not sure what this should be), or some GUI control that clearly shows you can't pad one field without padding the other (perhaps a box around both with a check mark to activate/deactivate both where one can't change the padding values without first checking the box). I tested this on GNU/Linux but I'm guessing this affects EasyTAG regardless of OS. I was trying this with FLAC files (using the FLAC tags one could also edit with metaflac(1)) if that matters.
This was probably a copy-and-paste error, now fixed in master as 786c97140d6afb78a806cf27d127fd75fc16e734. Thanks for the bug report!