Fix the disc number padding widgets

Bind the spin button for setting the disc number padding to the
tag-disc-length setting, and the corresponding check button to the
tag-disc-padded setting, rather than using the track number settings.

https://bugzilla.gnome.org/show_bug.cgi?id=741889